--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -4,6 +4,8 @@
 [alias]
 	lol = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --all
 	undo = reset --soft HEAD~1
+	stash-all = stash save --include-untracked
+	alias = !git config --get-regexp ^alias\\. | sed -e s/^alias\\.// -e s/\\ /\\ =\\ /
 [safe]
 	directory = C:/Users/borek.saheli/.local/share/chezmoi
 	directory = C:/Users/borek.saheli/.config/nvim
