refactor(git config): configure git hooks path and update komorebi bar settings

--- a/dot_config/git/config
+++ b/dot_config/git/config
@@ -22,6 +22,7 @@
     defaultBranch = main
 [core]
     excludesFile = ~/.config/git/ignore
+	hooksPath = ~/.config/git/hooks
 [includeIf "gitdir:C:/Users/borek.saheli/code/personal/**"]
 	path = ~/.config/git/config-personal
 
